force-app/main/default/objects/ampi__Project_Geographic_Area__c/ampi__Project_Geographic_Area__c.object-meta.xml
<CustomObject>
    <description>Geographic areas of operation for the project</description>
    <label>Project Geographic Area</label>
    <nameField>
        <displayFormat>PGA-{0000}</displayFormat>
        <label>Project Geographic Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Geographic Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>