force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to indicate if this project geographic area is active</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>