force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__Exclude_From_IATI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Exclude_From_IATI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this project geographic area should be excluded while publishing IATI report</description>
    <label>Exclude from IATI</label>
    <type>Checkbox</type>
</CustomField>