force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__Geographic_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Geographic_Area__c</fullName>
    <description>Master-detail to specify parent geographic area</description>
    <label>Geographic Area</label>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Project Geographic Areas</relationshipLabel>
    <relationshipName>Project_Geographic_Areas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>