force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>ampi__Geolocation__c</fullName>
    <description>Location field to specify geolocation of the geographic area</description>
    <inlineHelpText>Geolocation from the Geographic Area</inlineHelpText>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>