force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Activity_Description__c</fullName>
    <description>Long text area field to capture the description of an IATI Activity happening in a particular geographic location, to distinguish any differences from the same IATI Activity in other geographic locations.</description>
    <label>IATI Activity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>