force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Code__c</fullName>
    <description>Text field to store the code of the Project Geographic Area for IATI reporting.</description>
    <label>IATI Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>