force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Country_Code__c</fullName>
    <description>This formula field copies IATI defined country code from parent geographic area</description>
    <formula>TEXT (ampi__Geographic_Area__r.ampi__IATI_Country_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IATI geographic area code</inlineHelpText>
    <label>IATI Country Code</label>
    <type>Text</type>
</CustomField>