force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Exactness__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Exactness__c</fullName>
    <description>Picklist field to track the exactness of a geographic location in which an IATI Activity operates.</description>
    <label>IATI Exactness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Approximate</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Exact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>