force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Feature_Designation_Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Feature_Designation_Category__c</fullName>
    <description>Picklist on IATI Location Type Categories to filter down the values in the ampi__Feature_Designation__c picklist: http://reference.iatistandard.org/203/codelists/LocationType-category/</description>
    <label>IATI Feature Designation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Administrative Region</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Hydrographic</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Area</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Populated Place</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Streets/Highways/Roads</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Spot Features</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Hypsographic</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Undersea</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Vegetation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>