force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Geographic_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Geographic_Vocabulary__c</fullName>
    <description>Picklist field to select which vocabulary is used when filling in the IATI Code field.</description>
    <label>IATI Geographic Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>Global Admininistrative Unit Layers</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>UN Second Administrative Level Boundary Project</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>Global Administrative Areas</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>ISO Country</label>
            </value>
            <value>
                <fullName>G1</fullName>
                <label>Geonames</label>
            </value>
            <value>
                <fullName>G2</fullName>
                <label>OpenStreetMap</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>