force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Location_Class__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Location_Class__c</fullName>
    <description>Picklist field to specify whether the location refers to a structure, a populated place (e.g. city or village), an administrative division, or another topological feature (e.g. river, nature reserve) as per IATI codelist</description>
    <label>IATI Location Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Administrative Region</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Populated Place</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Structure</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Other Topographical Feature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>