force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Location_Description__c</fullName>
    <description>Long text area field to capture the description that qualifies the location for an IATI Activity.</description>
    <label>Location Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>