force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Location_Reach__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Location_Reach__c</fullName>
    <description>Picklist field to indicate how an IATI Activity was reaching this particular geographic location.</description>
    <label>IATI Location Reach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Activity</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Intended Beneficiaries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>