force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Percentage__c</fullName>
    <description>Percent field to indicate what percent of total funding for an IATI Activity is being directed towards a particular geographic area. The number in this field must fall between 0 and 100, and the totals of this field (for all geographic areas of any particular vocabulary) must not add up to more than 100.</description>
    <label>IATI Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>