force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Region__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Region__c</fullName>
    <description>Formula field to populate with IATI defined regions</description>
    <formula>TEXT(ampi__Geographic_Area__r.ampi__IATI_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IATI defined regions</inlineHelpText>
    <label>IATI Region</label>
    <type>Text</type>
</CustomField>