force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Region_Code__c</fullName>
    <description>Formula field that associates a code with ampi__IATI_defined_regions__c</description>
    <formula>TEXT(ampi__Geographic_Area__r.ampi__IATI_Region_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Code corresponding to the IATI defined regions</inlineHelpText>
    <label>IATI Region Code</label>
    <type>Text</type>
</CustomField>