force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Region_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Region_Vocabulary__c</fullName>
    <description>Picklist to determine which vocabulary is used for the IATI Region Code field.</description>
    <label>IATI Region Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>OECD DAC</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>UN</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Reporting Organisation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>