force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__IATI_Region_Vocabulary_URI__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Region_Vocabulary_URI__c</fullName>
    <description>Text field to store the URI of the IATI Region Vocabulary named in the IATI Region Vocabulary picklist field.</description>
    <inlineHelpText>This link will be published in the IATI Activity file and must be publicly accessible.</inlineHelpText>
    <label>IATI Region Vocabulary URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>