force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <description>Master-detial to specify the parent project for this project geographic area</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Geographic Areas</relationshipLabel>
    <relationshipName>Project_Geographic_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>