force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__Project_Geographic_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Geographic_Area__c</fullName>
    <description>[NOT IN USE - Candidate for Deprecation]</description>
    <label>Project Geographic Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>