force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/ampi__Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type__c</fullName>
    <description>This formula field prints the project geographic area type from the parent geographic area.</description>
    <formula>TEXT(ampi__Geographic_Area__r.ampi__Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>