force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Case Safe ID</label>
    <type>Text</type>
</CustomField>