force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/Delete_PIGAs__c.field-meta.xml
<CustomField>
    <fullName>Delete_PIGAs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete PIGAs</label>
    <type>Checkbox</type>
</CustomField>