force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/Duplicate_Catcher__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Catcher__c</fullName>
    <formula>ampi__Project__r.Name&amp;ampi__Geographic_Area__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Catcher</label>
    <type>Text</type>
</CustomField>