force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/Is_PU__c.field-meta.xml
<CustomField>
    <fullName>Is_PU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PU</label>
    <type>Checkbox</type>
</CustomField>