force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/Tag_Settings__c.field-meta.xml
<CustomField>
    <fullName>Tag_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tag Settings</label>
    <referenceTo>tag__Tag_Settings__c</referenceTo>
    <relationshipLabel>Project Geographic Areas</relationshipLabel>
    <relationshipName>Project_Geographic_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>