force-app/main/default/objects/ampi__Project_Geographic_Area__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Populated by automation: A concatenation of the Project ID and the PU ID, to ensure that there is never a duplicate Project PU record.</inlineHelpText>
    <label>Unique ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>