force-app/main/default/objects/ampi__Project_Geographic_Area__c/validationRules/ampi__IATI_Percentage_Less_Than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__IATI_Percentage_Less_Than_100</fullName>
    <active>true</active>
    <description>IATI Percentage should not exceed 100%</description>
    <errorConditionFormula>ampi__IATI_Percentage__c &gt;1</errorConditionFormula>
    <errorDisplayField>ampi__IATI_Percentage__c</errorDisplayField>
    <errorMessage>IATI Percentage should not exceed 100%</errorMessage>
</ValidationRule>