force-app/main/default/objects/ampi__Project_Geographic_Area__c/validationRules/ampi__IATI_Percentage_Only_Country_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__IATI_Percentage_Only_Country_Level</fullName>
    <active>true</active>
    <description>IATI Percentage should only be filled when Project Geographic Area is of country type</description>
    <errorConditionFormula>AND( ampi__Type__c  &lt;&gt; &quot;Country&quot;, NOT(ISBLANK(ampi__IATI_Percentage__c )))</errorConditionFormula>
    <errorDisplayField>ampi__IATI_Percentage__c</errorDisplayField>
    <errorMessage>IATI Percentage should only be filled when Project Geographic Area is of country type</errorMessage>
</ValidationRule>