force-app/main/default/objects/ampi__Project_Geographic_Area__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>ampi__Project__c</columns>
    <columns>ampi__Geographic_Area__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Project__c</field>
        <operation>contains</operation>
        <value>Strengthening local structures in the Guria and Kakheti regions</value>
    </filters>
    <label>All</label>
</ListView>